--- a/android/res/layout/fragment_downloader.xml
+++ b/android/res/layout/fragment_downloader.xml
@@ -38,10 +38,15 @@
     android:layout_marginBottom="@dimen/margin_base"
     android:src="?fabAdd"/>
 
-  <include
-    layout="@layout/placeholder"
+  <com.mapswithme.maps.widget.PlaceholderView
+    android:id="@+id/placeholder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_below="@id/toolbar"
-    android:layout_above="@id/action"/>
+    android:layout_above="@id/action"
+    android:paddingLeft="@dimen/margin_double_and_half"
+    android:paddingRight="@dimen/margin_double_and_half"
+    android:paddingTop="@dimen/placeholder_margin_top"
+    android:visibility="gone"
+    tools:visibility="visible"/>
 </RelativeLayout>
