--- a/android/res/layout/fragment_search.xml
+++ b/android/res/layout/fragment_search.xml
@@ -1,61 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout
   xmlns:tools="http://schemas.android.com/tools"
   style="@style/MwmWidget.Floating"
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:orientation="vertical">
-  <include
-    android:id="@+id/toolbar"
-    layout="@layout/toolbar_with_search_no_elevation"
+  android:layout_height="match_parent">
+  <android.support.design.widget.CoordinatorLayout
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"/>
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <android.support.design.widget.AppBarLayout
+      android:id="@+id/app_bar"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:background="?attr/colorPrimary"
+      android:elevation="@dimen/margin_half_plus"
+      tools:targetApi="lollipop">
+      <android.support.design.widget.CollapsingToolbarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_scrollFlags="scroll|enterAlways">
+        <include
+          android:id="@+id/toolbar"
+          layout="@layout/toolbar_with_search_no_elevation"
+          android:layout_width="match_parent"
+          android:layout_height="?attr/actionBarSize"/>
+      </android.support.design.widget.CollapsingToolbarLayout>
+      <include layout="@layout/search_filter_panel"/>
+    </android.support.design.widget.AppBarLayout>
 
-  <FrameLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <!-- Tabs -->
-    <LinearLayout
-      android:id="@+id/tab_frame"
+    <FrameLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:orientation="vertical">
+      app:layout_behavior="@string/appbar_scrolling_view_behavior">
+      <!-- Tabs -->
       <LinearLayout
-        android:id="@+id/tabs_layout"
-        android:orientation="vertical"
+        android:id="@+id/tab_frame"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
         <android.support.design.widget.TabLayout
           android:id="@+id/tabs"
           android:theme="@style/ThemeOverlay.AppCompat"
           android:layout_width="match_parent"
           android:layout_height="@dimen/tabs_height"
+          android:elevation="@dimen/appbar_elevation"
           app:tabIndicatorColor="?colorAccent"
           app:tabMode="fixed"
           app:tabGravity="fill"/>
 
-        <FrameLayout
-          style="@style/MwmWidget.FrameLayout.Elevation"
+        <View
+          android:id="@+id/tabs_divider"
           android:layout_width="match_parent"
-          android:layout_height="wrap_content"/>
+          android:layout_height="1dp"
+          android:background="?dividerHorizontal"/>
+
+        <android.support.v4.view.ViewPager
+          android:id="@+id/pages"
+          style="@style/MwmWidget.Floating"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"/>
       </LinearLayout>
 
-      <android.support.v4.view.ViewPager
-        android:id="@+id/pages"
-        style="@style/MwmWidget.Floating"
+      <!-- Results -->
+      <FrameLayout
+        android:id="@+id/results_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-    </LinearLayout>
+        android:layout_height="match_parent"
+        android:background="?cardBackground">
+        <include
+          layout="@layout/recycler_default"
+          app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
-    <!-- Results -->
-    <FrameLayout
-      android:id="@+id/results_frame"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:background="?windowBackgroundForced">
-      <include layout="@layout/recycler_default"/>
+        <include layout="@layout/placeholder"/>
+      </FrameLayout>
 
       <com.mapswithme.maps.widget.PlaceholderView
         android:id="@+id/placeholder"
@@ -66,12 +85,16 @@
         android:paddingTop="@dimen/placeholder_margin_top"
         android:visibility="gone"
         tools:visibility="visible"/>
+      <!-- Country download suggest fragment -->
+      <FrameLayout
+        android:id="@+id/download_suggest_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
     </FrameLayout>
+  </android.support.design.widget.CoordinatorLayout>
+  <com.mapswithme.maps.search.HotelsFilterView
+    android:id="@+id/filter"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
+</FrameLayout>
 
-    <!-- Country download suggest fragment -->
-    <FrameLayout
-      android:id="@+id/download_suggest_frame"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"/>
-  </FrameLayout>
-</LinearLayout>
