--- a/android/res/values/dimens.xml
+++ b/android/res/values/dimens.xml
@@ -175,4 +175,6 @@
   <!-- Placeholder-->
   <dimen name="placeholder_margin_top">20dp</dimen>
   <dimen name="placeholder_margin_top_no_image">80dp</dimen>
+
+  <dimen name="hotels_filter_padding">128dp</dimen>
 </resources>
