--- a/android/res/values/themes-attrs.xml
+++ b/android/res/values/themes-attrs.xml
@@ -23,7 +23,6 @@
     <attr name="ppButtonsBackground" format="color"/>
     <attr name="ppPreviewHeadOpen" format="reference"/>
     <attr name="ppPreviewHeadClosed" format="reference"/>
-    <attr name="ppArrowDrawable" format="reference"/>
     <attr name="ppRatingBackground" format="color"/>
     <attr name="ppRatingText" format="color"/>
     <attr name="ppPositive" format="reference"/>
@@ -70,6 +69,11 @@
 
     <attr name="bannerText" format="color"/>
     <attr name="bannerBackground" format="color"/>
+
+    <attr name="steadyIconTint" format="color"/>
+    <attr name="steadyIconBackground" format="color"/>
+    <attr name="activeIconTint" format="color"/>
+    <attr name="activeIconBackground" format="color"/>
   </declare-styleable>
 
   <declare-styleable name="ThemeAttrs.NavButtons">
