[android] Added hotels filter to the map activity.

--- a/android/res/layout/activity_map.xml
+++ b/android/res/layout/activity_map.xml
@@ -66,4 +66,16 @@
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
     placePage:animationType="bottom"/>
+
+  <include
+    layout="@layout/search_filter_panel"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/height_block_base"
+    android:layout_alignParentBottom="true"/>
+
+  <com.mapswithme.maps.search.HotelsFilterView
+    android:id="@+id/hotels_filter"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:visibility="gone"/>
 </RelativeLayout>
