--- a/android/res/layout-land/activity_map.xml
+++ b/android/res/layout-land/activity_map.xml
@@ -73,4 +73,16 @@
     placePage:animationType="left"
     placePage:docked="true"
     tools:ignore="UnknownIdInLayout"/>
+
+  <include
+    layout="@layout/search_filter_panel"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/height_block_base"
+    android:layout_alignParentBottom="true"/>
+
+  <com.mapswithme.maps.search.HotelsFilterView
+    android:id="@+id/hotels_filter"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:visibility="gone"/>
 </RelativeLayout>
